spectec/test/elab/neg/type-undefined-syntax.t
  $ ./main.exe type-undefined-syntax.spectec 2>&1
  error[elab/ctx-type-undefined]: type `wrap` is undefined
    --> type-undefined-syntax.spectec:3:18
    |
  3 | syntax wrapper = wrap nope
    |                  ^^^^
    = source: elab
  [1]
